# CppND-Capstone-Snake-Game

./: CMakeLists.txt  README.md
cmake/: FindSDL2_ttf.cmake
data/: high_scores.txt
src/: controller.cpp  controller.h  food.cpp  food.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  renderer.cpp  renderer.h  scoreManager.cpp  scoreManager.h  snake.cpp  snake.h  timer.cpp  timer.h
